# hiload_nginix

./: .gitignore  CMakeLists.txt  Makefile  README.md  hello.c  hello.h  hiload_nginx  main.c  mem_manager.c  mem_manager.h  nginx_v4  nginx_v4.cbp  queue.c  queue.h  server.config  stack.c  stack.h  tm_pool  tp_pool.c  tp_pool.h
files/: index.html
server/: server.c  server.h
server/clone_pool/: clone_pool.c  clone_pool.h
server/clone_pool/shared_queue/: shared_queue.c  shared_queue.h
server/handlers/: handlers.c  handlers.h
server/manager/: manager.c  manager.h
server/manager/config_parser/: config_parser.c  config_parser.h
server/manager/files/: files.c  files.h
server/manager/permission/: permission.c  permission.h
server/manager/shared_hash_table/: shared_hash_table.c  shared_hash_table.h
testing/: CMakeLists.txt  Makefile  testing  testing.c  testing.h
utils/macros/: macros.h
utils/properties/: properties.h
utils/request_parser/: request_parser.c  request_parser.h
utils/response_constructor/: response_constructor.c  response_constructor.h
utils/utilities/: utilities.c  utilities.h
